--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         }
 
         function fetchDataFromLambda() {
-            const apiUrl = 'https://your-api-url.com/get-tasks'; // Replace with your API to fetch tasks
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123'; // Replace with your API to fetch tasks
 
             fetch(apiUrl)
                 .then(response => response.json())
