--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@
                     document.getElementById('data-container').innerHTML = 'Failed to load data. Please check the console for details.';
                 });
         }
+        function populateTable() {
+            const tableBody = document.querySelector('#data-container table tbody');
+            if (!tableBody) {
+                console.error("Table body not found");
+                return;
+            }
+            const rows = tableBody.querySelectorAll('tr');
+            rows.forEach(row => {
+                const id = taskIdCounter++;
+                row.setAttribute('data-id', id);
+                const editButton = row.querySelector('button');
+                if (editButton) {
+                    editButton.setAttribute('onclick', `editTask(${id})`);
+                }
+            });
+        }
 
         function showRemoveTaskPopup() {
             fetchDataFromLambda();
