--- a/index.html
+++ b/index.html
@@ -1,11 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch Data from Lambda</title>
+    <title>Employee Tasks</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+        .button {
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        .button:hover {
+            background-color: #45a049;
+        }
+        /* Popup styles */
+        .popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            border: 1px solid #ccc;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+        }
+        .popup button {
+            margin-top: 10px;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+    </style>
+</head>
+
+    <body onload="onLoadFunction()">
+    <h1>Fetch Data from Lambda</h1>
+    <div id="data-container">Loading data...</div>
+
+    <br>
+    <button class="button" onclick="showPopup()">Add Task</button>
+
+    <!-- Popup for adding tasks -->
+    <div id="popup" class="popup">
+        <h3>Add New Task</h3>
+        <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
+            <label for="employeeName">Employee Name:</label>
+            <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
+
+            <label for="taskDescription">Task:</label>
+            <input type="text" id="taskDescription" name="TaskDescription" required><br><br>
+
+            <label for="StartDate">Start Date:</label>
+            <input type="date" id="StartDate" name="StartDate"><br><br>
+
+            <label for="EndDate">End Date:</label>
+            <input type="date" id="EndDate" name="EndDate"><br><br>
+
+            <label for="Remarks">Remarks:</label>
+            <input type="text" id="Remarks" name="Remarks"><br><br>
+
+            <button class="button" type="submit">Add</button>
+            <button class="button" type="button" onclick="closePopup()">Cancel</button>
+        </form>
+    </div>
+
+    <!-- Overlay for popup -->
+    <div id="overlay" class="overlay" onclick="closePopup()"></div>
+
+    <!-- Success message popup -->
+    <div id="messagePopup" class="popup">
+        <p id="messageContent"></p>
+        <button class="button" onclick="closeMessagePopup()">Close</button>
+    </div>
+
     <script>
-        function onLoadFunction() {
+
+	function onLoadFunction() {
             console.log("Page has loaded.");
             fetchDataFromLambda();
         }
@@ -25,10 +124,50 @@
                     container.innerHTML = 'Failed to load data. Please check the console for details.';
                 });
         }
+
+        function showPopup() {
+            document.getElementById('popup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function closePopup() {
+            document.getElementById('popup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
+
+        function closeMessagePopup() {
+            document.getElementById('messagePopup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
+
+        document.getElementById('taskForm').onsubmit = async function(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            const form = event.target;
+            const formData = new FormData(form);
+            const params = new URLSearchParams(formData).toString();
+
+            try {
+                const response = await fetch(form.action, {
+                    method: form.method,
+                    headers: {
+                        'Content-Type': form.enctype
+                    },
+                    body: params
+                });
+
+                const result = await response.json();
+                document.getElementById('messageContent').innerText = result.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+
+                closePopup(); // Close the add task popup
+            } catch (error) {
+                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+            }
+        };
     </script>
-</head>
-<body onload="onLoadFunction()">
-    <h1>Fetch Data from Lambda</h1>
-    <div id="data-container">Loading data...</div>
 </body>
 </html>
