--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="data-container">Loading data...</div>
 
     <br>
-    <button class="button" onclick="showPopup()">Add Task</button>
+    <button class="button" onclick="showPopup()">Remove Task</button>
 
     <!-- Popup for adding tasks -->
     <div id="popup" class="popup">
