--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         }
 
        function removeTask(taskDescription) {
-            const apiUrl = 'https://your-api-endpoint'; // Replace with your Lambda API Gateway URL
+            const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/default/RemoveTask'; // Replace with your Lambda API Gateway URL
 
             fetch(apiUrl, {
                 method: 'DELETE',
